<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.github.mikephil.charting.charts.LineChart
                    android:layout_width="match_parent"
                    android:layout_height="373dp" android:id="@+id/graph_view_ed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:text="@string/expNameList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tv_exp_name"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/graph_view_ed"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/no_name"
                    android:ems="10"
                    android:id="@+id/et_expname_edit" app:layout_constraintStart_toEndOf="@+id/tv_exp_name"
                    android:layout_marginStart="2dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/graph_view_ed" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                    android:textSize="14sp" android:autofillHints="" android:hint="@string/no_name"/>
            <TextView
                    android:text="@string/measDateList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tv_exp_measdate"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp" app:layout_constraintTop_toTopOf="@+id/et_expmeasdate_edit"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/no_date"
                    android:ems="10"
                    android:id="@+id/et_expmeasdate_edit" app:layout_constraintStart_toEndOf="@+id/tv_exp_measdate"
                    app:layout_constraintTop_toBottomOf="@+id/et_expname_edit" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="34dp"
                    android:textSize="14sp" android:hint="@string/no_date"/>
            <TextView
                    android:text="@string/commentList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tv_exp_comment"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/et_expmeasdate_edit"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/no_comment"
                    android:ems="10"
                    android:id="@+id/et_expcomment_edit" app:layout_constraintStart_toEndOf="@+id/tv_exp_comment"
                    android:layout_marginStart="73dp" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_expmeasdate_edit"
                    app:layout_constraintHorizontal_bias="0.0" android:textSize="14sp"
                    android:hint="@string/no_comment"/>
            <TextView
                    android:text="@string/setName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tv_expsetname_change"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/et_expcomment_edit"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
            <TextView
                    android:text="@string/no_set_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/tv_setname_var_change"
                    app:layout_constraintStart_toEndOf="@+id/tv_expsetname_change"
                    android:layout_marginStart="30dp"
                    app:layout_constraintTop_toBottomOf="@+id/et_expcomment_edit" android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="@string/setDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tv_setdesc_change"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_setname_var_change"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
            <TextView
                    android:text="@string/no_set_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/tv_setdesc_var_change"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_setname_var_change"
                    app:layout_constraintStart_toEndOf="@+id/tv_setdesc_change"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintHorizontal_bias="0.222" android:layout_marginStart="28dp"/>
            <TextView
                    android:text="@string/typeDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tv_typedesc_change"
                    app:layout_constraintTop_toBottomOf="@+id/tv_setdesc_change" android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            />
            <TextView
                    android:text="@string/no_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/tv_typedesc_var_change"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_setdesc_var_change"
                    app:layout_constraintStart_toEndOf="@+id/tv_typedesc_change" android:layout_marginStart="65dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintHorizontal_bias="1.0"/>
            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btn_save_change"
                    android:text="@string/save_change"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_typedesc_var_change"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="4dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>