<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="105dp">

    <View
            android:layout_width="match_parent"
            android:layout_height="5dp" android:id="@+id/view" android:layout_marginTop="3dp"
            android:background="@drawable/item_separator"/>
    <TextView
            android:text="@string/expNameList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/tv_expname_list"
            android:layout_margin="5dp"/>
    <TextView
            android:text="@string/measDateList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/tv_expdate_list"
            android:layout_margin="5dp"/>
    <TextView
            android:text="@string/commentList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/tv_expcomment_list"
            android:layout_margin="5dp"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="5dp" android:id="@+id/view2" android:background="@drawable/item_separator"/>
</LinearLayout>